--- a/SpaceInvaders.Website/src/features/chat/chat.css
+++ b/SpaceInvaders.Website/src/features/chat/chat.css
@@ -1,24 +1,32 @@
 .chat-box {
-  max-width: 315px;
   min-width: 150px;
   border: 1px solid #B6B6B6;
   background: #E8E8E8;
+  height: 100%;
 }
 .chat-box .chat-header {
   border-bottom: 1px solid #c7c7c7;
 }
 .chat-box .messages-box {
-  max-height: 280px;
   margin-bottom: 5px;
   padding: 5px;
   overflow-y: auto;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  right: 1px;
+  bottom: 35px;
 }
 .chat-box .messages-box .message {
   padding: 5px 10px;
   background: #9BE0B6;
   border-radius: 10px;
 }
-.chat-box .input-box {
+.chat-box .input-wrapper {
+  position: absolute;
+  bottom: 0;
+}
+.chat-box .input-wrapper .input-box {
   width: 210px;
   height: 19px;
   padding-left: 5px;
