--- a/SpaceInvaders.Website/src/features/chat/chat.less
+++ b/SpaceInvaders.Website/src/features/chat/chat.less
@@ -1,26 +1,35 @@
 .chat-box {
-    max-width: 315px;
     min-width: 150px;
     border: 1px solid #B6B6B6;
     background: #E8E8E8;
+    height: 100%;
     .chat-header {
         border-bottom: 1px solid #c7c7c7;
     }
     .messages-box {
-        max-height: 280px;
         margin-bottom: 5px;
         padding: 5px;
         overflow-y: auto;
+        position: absolute;
+        top: 35px;
+        left: 0;
+        right: 1px;
+        bottom: 35px;
         .message {
             padding: 5px 10px;
             background: #9BE0B6;
             border-radius: 10px;
         }
     }
-    .input-box {
-        width: 210px;
-        height: 19px;
-        padding-left: 5px;
-        margin-right: 5px;
+    .input-wrapper {
+        position: absolute;
+        bottom: 0;
+
+        .input-box {
+            width: 210px;
+            height: 19px;
+            padding-left: 5px;
+            margin-right: 5px;
+        }
     }
 }
