--- a/SpaceInvaders.Website/src/features/userlist/userlist.css
+++ b/SpaceInvaders.Website/src/features/userlist/userlist.css
@@ -1,17 +1,21 @@
 .users-box {
-  max-width: 315px;
   min-width: 150px;
   border: 1px solid #B6B6B6;
   background: #E8E8E8;
+  height: 100%;
 }
 .users-box .users-header {
   border-bottom: 1px solid #c7c7c7;
 }
 .users-box .users-wrapper {
-  max-height: 280px;
   margin-bottom: 5px;
   padding: 5px;
   overflow-y: auto;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .users-box .users-wrapper .user {
   padding: 5px 10px;
