--- a/SpaceInvaders.Website/src/features/userlist/userlist.less
+++ b/SpaceInvaders.Website/src/features/userlist/userlist.less
@@ -1,16 +1,20 @@
 .users-box {
-    max-width: 315px;
     min-width: 150px;
     border: 1px solid #B6B6B6;
     background: #E8E8E8;
+    height: 100%;
     .users-header {
         border-bottom: 1px solid #c7c7c7;
     }
     .users-wrapper {
-        max-height: 280px;
         margin-bottom: 5px;
         padding: 5px;
         overflow-y: auto;
+        position: absolute;
+        top: 35px;
+        left: 0;
+        right: 0;
+        bottom: 0;
         .user {
             padding: 5px 10px;
         }
