Added CanvasRender package, created game logic layer

--- a/SpaceInvaders.Website/src/features/dashboard/dashboard.css
+++ b/SpaceInvaders.Website/src/features/dashboard/dashboard.css
@@ -13,3 +13,12 @@
   position: relative;
   height: 49%;
 }
+#viewport {
+  position: relative;
+  border: 1px solid #414141;
+  margin: 20px;
+}
+#viewport canvas {
+  position: absolute;
+  background-color: transparent;
+}
