--- a/SpaceInvaders.Website/src/features/dashboard/dashboard.less
+++ b/SpaceInvaders.Website/src/features/dashboard/dashboard.less
@@ -15,3 +15,5 @@
         height: 49%;
     }
 }
+#viewport { position: relative; border: 1px solid #414141; margin: 20px; }
+#viewport canvas { position: absolute;  background-color: transparent; }
